Try building cactus-maven-xml as a multi-release jar that can be used on JDK 8 - I am using it as a dependency in the maven-merge-configuration mojo, which is still tied to JDK 8, so this will be convenient and should be harmless for all other consumers of it.
Need this to get an updated maven-merge-configuration mojo out the door.